fix alignment, try serif font

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -1,9 +1,6 @@
 /* import fonts font */
-@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,300);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400);
 @import url(https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400);
-@import url(https://fonts.googleapis.com/css?family=Lora:300,300i,400,400i);
-@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text:400);
 
 /* link coloring */
 a {
@@ -17,6 +14,7 @@ kbd,
 pre,
 samp {
   font-family: IBM Plex Mono;
+  font-size: 0.8em;
 }
 
 /* no uppercase package title */
@@ -26,7 +24,8 @@ samp {
 
 /* body font */
 body {
-  font-family: Work Sans, 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif;
+  font-family: Crimson Text, serif;
+  font-size: 18px;
   font-weight: 400;
   color: black;
 }
@@ -37,11 +36,6 @@ body {
     .sourceCode a:link,
     .sourceCode a:active,
     .sourceCode a:visited {color:darkred;}
-
-/* this moves the h1 so much to the top that we can get rid of it */
-.contents h1 {
-    padding-top: 40px;
-}
 
 /* reduce paddint-top a bit (default 60px) */
 .contents h2, .contents h3, .contents h4 {
@@ -74,9 +68,6 @@ body {
   top: 70px;
 }
 
-/* reposition navbar-right so that it aligns with the sidebar */
-.navbar-right {
-    position: absolute;
-    left: 65.5%;
-    float: left !important;
+.contents .page-header {
+    margin-top: calc(50px + 1em);
 }
